<resources>
    <string name="app_name">Spinner練習1014_013(完成)</string>

    <string name="action_settings">Settings</string>
    <string name="label_sex">性別：</string>
    <string name="label_age">年紀：</string>
    <string name="edt_hint_text">請輸入年齡。</string>
    <string-array name="sex_list">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string name="spn_sex_list_prompt">請選擇性別</string>
    <string name="btnOK">確定送出</string>
    <string name="sug_not_hurry">還不急。</string>
    <string name="sug_hurry">趕快結婚吧!!!</string>
    <string name="sug_find">開始找對象吧。</string>
    <string name="result">建議：</string>
    <string name="sex_male">男</string>
</resources>
