<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_sex"
        android:id="@+id/label_sex"
        android:textSize="20pt" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnSex"
        android:layout_below="@+id/label_sex"
        android:layout_alignParentStart="true"
        android:entries="@array/sex_list"
        android:spinnerMode="dialog"
        android:prompt="@string/spn_sex_list_prompt"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spnSex"
        android:text="@string/label_age"
        android:id="@+id/label_age"
        android:textSize="20pt" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_age"
        android:layout_below="@+id/label_age"
        android:layout_alignParentStart="true"
        android:hint="@string/edt_hint_text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnOK"
        android:id="@+id/btnOK"
        android:layout_below="@+id/edit_age"
        android:layout_alignParentStart="true"
        android:textSize="10pt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/sug"
        android:layout_below="@+id/btnOK"
        android:layout_alignParentStart="true"
        android:textSize="15pt" />

</RelativeLayout>
